# brioche

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
brioche/: models.py  multisetEnrichment.py  plot.py  test_n2.py
tests/: testMultiset.py
