[tool.poetry]
name = "brioche-enrichment"
packages = [
{ include="brioche", from="." },
]
version = "0.1.2a"
description = "Bayesian tests for set enrichment."
authors = ["Daniel O'Hanlon <dpohanlon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
jax = "^0.4.5"
numpy = "^1.24.2"
tqdm = "^4.64.1"
numpyro = "^0.11.0"
statsmodels = ">=0.13.5"
scipy = ">=1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
